TestJamalMain does not overwrite pom.xml with working but unformatted version jamal-cmd pom does not use maven-plugin-plugin (it should not use, it was not working, it just generated a warning) Ruby module was created from the Groovy module snip can use a regex to gauge some value from the first line of the snippet pom files do not contain groupId when it is inherited from the parent anyway